build:feat:dev-mode option for docker to improve startup time build:feat:alfresco share app control